# HHbbVV

./: .codespell-whitelist.txt  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AnalysisPlan.md  PrintParquet.py  README.md  VBFgenInfoTests.ipynb  VBFgenselection.ipynb  VBFjetsVisualizePrototype.ipynb  VBFselectionsTests.ipynb  environment.yml  noxfile.py  out.pickle  out_hybrid.pickle  out_morebins.pickle  pyproject.toml  requirements.txt  run.py  runCoffeaCasa.ipynb  runCoffeaCasa.py  runJetHTTriggerEfficiencies.ipynb  setup.py  submit.py  submit.templ.sh  submit_traininginput.py  threshold_test.py  vbftesting.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  lint.yml
binder/: calcTriggerSFUncertainties-Jul21.ipynb  calcTriggerSFUncertainties.ipynb  plotJetHTTriggerEfficiencies_1D_Jul15.ipynb  plotTrigEffs.ipynb
condor/: combine_pickles.py  run.py  submit.py  submit.templ.jdl  submit.templ.sh
corrections/trigEffs/: AK15JetHT3DTriggerEfficiencyError_2017.hist  AK15JetHT3DTriggerEfficiency_2017.root  AK15JetHTTriggerEfficiencyError_2017.hist  AK8JetHT3DTriggerEfficiencyError_2017.hist  AK8JetHTTriggerEfficiencyError_2017.hist  HybridJetHT3DTriggerEfficiencyError_2017.hist
data/: 2017_SingleMuon.txt  AK15JetHTTriggerEfficiency_2017.coffea  AK15JetHTTriggerEfficiency_2017.hist  SingleMuon_2017.txt  fileset_eos.py  indexpfnano.py  nanoindex_2023.json  pfnanoindex_2016.json  pfnanoindex_2016APV.json  pfnanoindex_2017.json  pfnanoindex_2018.json  pfnanov1_2017.json  samples.json  samples.md  samples.txt  singlemuon_pfnanoindex_2016.json  singlemuon_pfnanoindex_2016APV.json  singlemuon_pfnanoindex_2017.json  singlemuon_pfnanoindex_2018.json  xsecs.json
data/2017_UL_nano/: GluGluHToTauTau_M125_TuneCP5_13TeV-powheg-pythia8.txt  GluGluHToWWTo4q_M-125.txt  GluGluHToWWToLNuQQ_M125_TuneCP5_PSweight_13TeV-powheg2-jhugen727-pythia8.txt  GluGluToBulkGravitonToHHTo4W_JHUGen_M-1000_narrow.txt  GluGluToHHTobbVV_node_cHHH1.txt  JetHT_Run2017B-09Aug2019_UL2017-v1_Jul8_21.txt  JetHT_Run2017C-09Aug2019_UL2017-v1_Jul8_21.txt  JetHT_Run2017D-09Aug2019_UL2017-v1_Jul8_21.txt  JetHT_Run2017E-09Aug2019_UL2017-v1_Jul8_21.txt  JetHT_Run2017F-09Aug2019_UL2017-v1_Jul8_21.txt  QCD_HT1000to1500_TuneCP5_PSWeights_13TeV-madgraphMLM-pythia8.txt  QCD_HT1500to2000_TuneCP5_PSWeights_13TeV-madgraphMLM-pythia8.txt  QCD_HT2000toInf_TuneCP5_PSWeights_13TeV-madgraphMLM-pythia8.txt  QCD_HT300to500_TuneCP5_PSWeights_13TeV-madgraphMLM-pythia8.txt  QCD_HT500to700_TuneCP5_PSWeights_13TeV-madgraphMLM-pythia8.txt  QCD_HT700to1000_TuneCP5_PSWeights_13TeV-madgraphMLM-pythia8.txt  ST_s-channel_4f_leptonDecays_TuneCP5_13TeV-mcatnlo-pythia8.txt  ST_t-channel_antitop_4f_InclusiveDecays_TuneCP5_13TeV-powheg-madspin-pythia8.txt  ST_tW_antitop_5f_DS_NoFullyHadronicDecays_TuneCP5_13TeV-powheg-pythia8.txt  ST_tW_top_5f_DS_NoFullyHadronicDecays_TuneCP5_13TeV-powheg-pythia8.txt  TTToHadronic_TuneCP5_13TeV-powheg-pythia8.txt  TTToSemiLeptonic_TuneCP5_13TeV-powheg-pythia8.txt  TT_Mtt-1000toInf_TuneCP5_13TeV-powheg-pythia8.txt  TT_Mtt-700to1000_TuneCP5_13TeV-powheg-pythia8.txt  WJetsToLNu_HT-100To200_TuneCP5_13TeV-madgraphMLM-pythia8.txt  WJetsToLNu_HT-1200To2500_TuneCP5_13TeV-madgraphMLM-pythia8.txt  WJetsToLNu_HT-200To400_TuneCP5_13TeV-madgraphMLM-pythia8.txt  WJetsToLNu_HT-400To600_TuneCP5_13TeV-madgraphMLM-pythia8.txt  WJetsToLNu_HT-600To800_TuneCP5_13TeV-madgraphMLM-pythia8.txt  WJetsToQQ_HT-400to600_TuneCP5_13TeV-madgraphMLM-pythia8.txt  WJetsToQQ_HT-600to800_TuneCP5_13TeV-madgraphMLM-pythia8.txt  WJetsToQQ_HT-800toInf_TuneCP5_13TeV-madgraphMLM-pythia8.txt  WW_TuneCP5_13TeV-pythia8.txt  WZ_TuneCP5_13TeV-pythia8.txt  jhu_HHbbWW.txt  (+4 more)
docs/: conf.py  index.md
inference_scans/: README.md  nuisance_renames.json  nuisance_renames.py  run_impacts.sh  run_law.sh  run_upper_limits_point_r.sh  run_upper_limits_point_r_qqHH_c2v0.sh  run_upper_limits_r_1d_c2v.sh  run_upper_limits_r_1d_kl.sh
outPickles/: out_ak15.pickle  out_ak8.pickle  out_ak8_3d.pickle
paper/: hepdata__unblinded__poi_r__params_r_gghh1.0_r_qqhh1.0_kl1.0_kt1.0_CV1.0_C2V1.0__log.yaml  hepdata__unblinded__poi_r_qqhh__params_r1.0_r_gghh1.0_kl1.0_kt1.0_CV1.0_C2V0.0__log.yaml  latex_tables.ipynb  limit_plots.ipynb  triggers.py
processors/: 2017_pileupweight.pkl  JetHTTriggerEfficienciesProcessor.py  TaggerInference.py  __init__.py  bbVVProcessor.py  bbVVSkimmer.py
python/: ControlPlots.py  HybridAnalysis.py  TrainBDT.py  YieldsAnalysis.py  calcJetHTTriggerEfficiencies.py  filelist.txt  out.txt  out2.txt  plotting.py  utils.py
src/: fileset_eos.py  indexpfnano.py  run.py  runCoffeaCasa.ipynb  runCoffeaCasa.py  runJetHTTriggerEfficiencies.ipynb  run_utils.py
tests/: test_package.py
(+4572 files in other folders)
