[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "HHbbVV"
authors = [
  { name = "Raghav Kansal", email = "rkansal@cern.ch" },
]
description = "HHbbVV"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]

[project.urls]
Homepage = "https://github.com/rkansal47/HHbbVV"
"Bug Tracker" = "https://github.com/rkansal47/HHbbVV/issues"
Discussions = "https://github.com/rkansal47/HHbbVV/discussions"
Changelog = "https://github.com/rkansal47/HHbbVV/releases"


[tool.hatch]
version.path = "src/HHbbVV/__init__.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["hhbbvv"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.8"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "hhbbvv.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 100

[tool.ruff]
src = ["src"]
exclude = ["src/HHbbVV/postprocessing/pickle_scripts", "src/HHbbVV/postprocessing/AK15", "src/HHbbVV/triton/ParticleTransformer*", "src/runCoffeaCasa.py", "**/*.ipynb"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "PLR",    # Design related pylint codes
  "T201",   # print statements
  "T203",   # pprint statements
  "EM101",  # Error message
  "EM102",
  "G002",   # Logging statement format
  "G003",   # Logging statement format
  "G004",
  "PLE1205", # logging format string
  "E722",   # bare except
  "E741",   # ambiguous variable name
  "RUF003", # ambiguous sigma
  "RUF005", # iterable unpacking
  "RUF013", # implicit 'Optional' type
  "PGH001", # eval
  "RET503",
  "RET504", # unnecessary assignment before return
  "RET505", # unnecessary else after return statement
  "NPY002", # np.random.rand -> np.random.Generator
  "C408",   # Unnecessary dict call
  "PD901",  # don't use variable name `df` for DataFrames
  "UP031",  # use f-string
]

isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["hhbbvv._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.8"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]
